--- a/Clase7_1/Pages/Index.cshtml
+++ b/Clase7_1/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <br />
 <br />
 
-<form class="form-horizontal">
+<form class="form-horizontal" method="post">
     <div class="form-group">
         <div class="col-sm-4">
             <div class="input-group input-group-lg">
@@ -23,19 +23,22 @@
 
         <div class="col-sm-4">
 
-            <select name="operacion" class="btn btn-danger dropdown-toggle">
+            <select name="operacion" class="btn btn-warning dropdown-toggle" id="seleccion" onchange="myfuncion()">
 
                 <option value="suma">SUMAR</option>
                 <option value="resta">RESTAR</option>
                 <option value="multi">MULTIPLICAR</option>
                 <option value="divi">DIVIDIR</option>
+                <option value="pote">Potenciación</option>
+                <option value="expo">EXPONENTE</option>
+                <option value="radi">Raiz</option>
             </select>
         </div>
     </div>
 
     <div class="form-group">
         <div class="col-sm-4">
-            <div class="input-group input-group-lg">
+            <div class="input-group input-group-lg" id="ocultar">
                 <span class="input-group-addon" id="sizing-addon1">2° numero</span>
                 <input type="number" name="numero2" step="0.1" class="form-control" aria-describedby="sizing-addon1">
 
@@ -47,10 +50,14 @@
     </div>
     <div class="form-group">
         <div class="col-sm-4">
-            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-send "></span> Mostrar Resultado</button>
+            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-send "></span> OBTENER RESULTADO</button>
+            <button type="reset" class="btn btn-danger"><span class="
+glyphicon glyphicon-erase"></span> LIMPIAR</button>
         </div>
     </div>
+    
 </form>
+@*<button onclick="myfuncion()">js</button>*@
 
 @if (Model.resultado != null)
 {
@@ -60,5 +67,6 @@
 else
 {
 
-    <h5 class="text-danger">Nada Que mostrar!</h5>
+    <h5 class="text-danger"><span class="glyphicon glyphicon-fire text-danger"></span> Nada Que mostrar!</h5>
 }
+
