--- a/Clase7_1/Pages/_Layout.cshtml
+++ b/Clase7_1/Pages/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -46,6 +46,20 @@
     </div>
 
     <environment include="Development">
+        <script type="text/javascript">
+           
+            function myfuncion() {
+                var selec = document.getElementById("seleccion").value;
+                console.log(selec);
+
+                var oc = document.getElementById("ocultar").innerHTML;
+                console.log(oc);
+                if (selec == "expo" || selec == "radi") {
+                    document.getElementById('ocultar').style.display = "none";
+                }
+                else { document.getElementById('ocultar').style.display = "table"; }
+            }
+        </script>
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
